<resources>
    <string name="app_name">Login</string>
    <string name="gap">Grapple</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="pas">Password</string>
    <string name="hola">Solo yo se para que</string>
    <string name="hola2">Soy genial :D</string>
    <string name="datos">Home</string>
    <string name="action_settings">Settings</string>
    <string name="nom">Nombre</string>
    <string name="apll">Apellido</string>
    <string name="matri">Matricula</string>
</resources>
