<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/blanco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/datos"
    android:textColor="@color/blanco"
    android:layout_gravity="center_horizontal"
    android:background="@color/blueF"
    android:textSize="@dimen/text"
    android:textStyle="bold"

    />

    <ImageView
        android:layout_width="373dp"
        android:layout_height="155dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text1"
        android:gravity="center"
        android:text="@string/nom"
        android:layout_marginTop="16dp"
        android:id="@+id/txt_nom"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text1"
        android:text="@string/apll"
        android:gravity="center"
        android:id="@+id/txtapll"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:id="@+id/txtmatri"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text1"
        android:text="@string/matri"
        android:gravity="center"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text1"
        android:text="@string/pas"
        android:gravity="center"
        android:id="@+id/txtpas"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text1"
        android:text="@string/email"
        android:gravity="center"
        android:id="@+id/txtemail"
        android:layout_marginTop="16dp"
        />
</LinearLayout>

